Fix text overflow completely

--- a/wp-content/themes/clo_web_2015/src/scss/pages/_home.scss
+++ b/wp-content/themes/clo_web_2015/src/scss/pages/_home.scss
@@ -183,11 +183,11 @@
                     margin-bottom:8px;
                     &.no_ex{width:150px;}
                     
-                    overflow:hidden;
-                    position:relative;
+                    //overflow:hidden;
+                    //position:relative;
                     //text-align: justify;
                     //margin-right: -1em;
-                    padding-right: 1em;
+                    //padding-right: 1em;
                     &.title4{height:64px;}
                     &.title2{height:32px;}
                     &.title1{height:16px;}
@@ -253,16 +253,16 @@
                         width          : 90%;
                         display        : inline-block;
                         vertical-align : top;
-                        overflow:hidden;
-                        position:relative;
-                        text-align: justify;
+                        //overflow:hidden;
+                        //position:relative;
+                        //text-align: justify;
                         //margin-right: -1em;
-                        padding-right: 1em;
+                        //padding-right: 1em;
                         &.excerpt3{height:45px;}
                         &.excerpt2{height:30px;}
                         
-                        &:before{content: '...';position: absolute;right: 0;bottom: 0;}
-                        &:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
+                        //&:before{content: '...';position: absolute;right: 0;bottom: 0;}
+                        //&:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
                     }
                 }
             }
@@ -275,23 +275,23 @@
                     float        : left;
                     height       : 77px;
                     p {
-                        width          : 160px;         
+                        width          : 143px;         
                         display        : inline-block;
                         vertical-align : top;
-                        overflow:hidden;
-                        position:relative;
-                        text-align: justify;
+                        //overflow:hidden;
+                        //position:relative;
+                        //text-align: justify;
                         //margin-right: -1em;
-                        padding-right: 1em;
+                        //padding-right: 1em;
                         &.excerpt3{height:45px;}
                         &.excerpt2{height:30px;}
-                        &:before{content: '...';position: absolute;right: 0;bottom: 0;}
-                        &:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
+                        //&:before{content: '...';position: absolute;right: 0;bottom: 0;}
+                        //&:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
                     }
                 }
 
                 .video-box {
-                    width      : 90px;
+                    width      : 96px;
                     height     : 68px;
                     background : #808285;
                     display    : inline-block;
@@ -489,11 +489,11 @@
                     margin-bottom:8px;
                     &.no_ex{width :150px;}
                     
-                    overflow:hidden;
-                    position:relative;
+                    //overflow:hidden;
+                    //position:relative;
                     //text-align: justify;
                     //margin-right: -1em;
-                    padding-right: 1em;
+                    //padding-right: 1em;
                     &.title4{height:64px;}
                     &.title2{height:32px;}
                     &.title1{height:16px;}
@@ -559,15 +559,15 @@
                         height: 30px;
                         display        : inline-block;
                         vertical-align : top;
-                        overflow:hidden;
-                        position:relative;
-                        text-align: justify;
+                        //overflow:hidden;
+                        //position:relative;
+                        //text-align: justify;
                         //margin-right: -1em;
-                        padding-right: 1em;
+                        //padding-right: 1em;
                         &.excerpt3{height:45px;}
                         &.excerpt2{height:30px;}
-                        &:before{content: '...';position: absolute;right: 0;bottom: 0;}
-                        &:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
+                        //&:before{content: '...';position: absolute;right: 0;bottom: 0;}
+                        //&:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
                     }
                 }
             }
@@ -579,18 +579,18 @@
                     float        : left;
                     height       : 77px;
                     p {
-                        width          : 160px;
+                        width          : 143px;
                         display        : inline-block;
                         vertical-align : top;
-                        overflow:hidden;
-                        position:relative;
-                        text-align: justify;
+                        //overflow:hidden;
+                        //position:relative;
+                        //text-align: justify;
                         //margin-right: -1em;
-                        padding-right: 1em;
+                       // padding-right: 1em;
                         &.excerpt3{height:45px;}
                         &.excerpt2{height:30px;}
-                        &:before{content: '...';position: absolute;right: 0;bottom: 0;}
-                        &:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
+                        //&:before{content: '...';position: absolute;right: 0;bottom: 0;}
+                        //&:after{content: '';position: absolute;right: 0;width: 1em;height: 1em;margin-top: 0.2em;}
                     }
                 }
 
